# node-genx

./: .bumpversion.cfg  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Guardfile  README.markdown  appveyor.yml  attribute.h  binding.gyp  element.h  node-genx.cc  package.json  writer.cc  writer.h  wscript
examples/: atom.js
lib/: genx.js
spec/: genx_spec.coffee  writer_spec.coffee
src/: attribute.cc  attribute.h  element.cc  element.h  genx.cc  genx.h  namespace.cc  namespace.h  node-genx.cc  node-genx.h  writer.cc  writer.h
test/: test.js  writer_test.js
